--- a/HW1.ipynb
+++ b/HW1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,30 +24,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[-1.6,\n",
-       " 3.1979951385210694,\n",
-       " 2.4644024441424284,\n",
-       " 1.2035359007112925,\n",
-       " 0.6502014632644292,\n",
-       " -0.1169233418248703,\n",
-       " -0.6605234854521386,\n",
-       " -0.5219265439062168,\n",
-       " -0.5665527428708069,\n",
-       " -0.5707465821813341,\n",
-       " -0.57078961788788]"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = [-1.6] # initial guess\n",
     "newton_iteration = 0\n",
@@ -57,42 +36,14 @@
     "    newton_iteration += 1\n",
     "    if np.abs(f(x_j)) < 1e-6:\n",
     "        break\n",
-    "A1 = x\n",
-    "A1"
+    "A1 = x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[-0.55,\n",
-       " -0.625,\n",
-       " -0.5875,\n",
-       " -0.5687500000000001,\n",
-       " -0.578125,\n",
-       " -0.5734375,\n",
-       " -0.5710937500000001,\n",
-       " -0.5699218750000001,\n",
-       " -0.5705078125,\n",
-       " -0.57080078125,\n",
-       " -0.570654296875,\n",
-       " -0.5707275390625,\n",
-       " -0.57076416015625,\n",
-       " -0.570782470703125,\n",
-       " -0.5707916259765625,\n",
-       " -0.5707870483398438,\n",
-       " -0.5707893371582031]"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "xl = -0.7\n",
     "xr = -0.4\n",
@@ -107,14 +58,12 @@
     "    else:\n",
     "        xr = xc[j]\n",
     "    if (np.abs(fc) < 1e-6):\n",
-    "        break\n",
-    "A2 = xc\n",
-    "A2"
+    "        break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +72,7 @@
        "[10, 17]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,6 +80,15 @@
    "source": [
     "A3 = [newton_iteration, bisection_iteration]\n",
     "A3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.save('/Users/jere_7/Documents/AU24/AMATH 481/A1.npy', A1)"
    ]
   }
  ],
