--- a/HW1.ipynb
+++ b/HW1.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,37 +58,28 @@
     "    else:\n",
     "        xr = xc[j]\n",
     "    if (np.abs(fc) < 1e-6):\n",
-    "        break"
+    "        break\n",
+    "A2 = xc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[10, 17]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "A3 = [newton_iteration, bisection_iteration]\n",
-    "A3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.save('/Users/jere_7/Documents/AU24/AMATH 481/A1.npy', A1)"
+    "A3 = [newton_iteration, bisection_iteration]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.save('/Users/jere_7/Documents/AU24/AMATH 481/A1.npy', A1)\n",
+    "np.save('/Users/jere_7/Documents/AU24/AMATH 481/A2.npy', A2)\n",
+    "np.save('/Users/jere_7/Documents/AU24/AMATH 481/A3.npy', A3)"
    ]
   }
  ],
