--- a/HW1.ipynb
+++ b/HW1.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question 1"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,13 +80,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "np.save('/Users/jere_7/Documents/AU24/AMATH 481/A1.npy', A1)\n",
     "np.save('/Users/jere_7/Documents/AU24/AMATH 481/A2.npy', A2)\n",
     "np.save('/Users/jere_7/Documents/AU24/AMATH 481/A3.npy', A3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = np.array([[1, 2], [-1, 1]])\n",
+    "B = np.array([[2, 0], [0, 2]])\n",
+    "C = np.array([[2, 0, -3], [0, 0, -1]])\n",
+    "D = np.array([[1, 2], [2, 3], [-1, 0]])\n",
+    "x = np.array([[1], [0]])\n",
+    "y = np.array([[0], [1]])\n",
+    "z = np.array([[1], [2], [-1]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A4 = A + B\n",
+    "A5 = 3 * x - 4 * y\n",
+    "A6 = np.dot(A, x)\n",
+    "A7 = np.dot(B, x - y)\n",
+    "A8 = np.dot(D, x)\n",
+    "A9 = np.dot(D, y) + z\n",
+    "A10 = np.dot(A, B)\n",
+    "A11 = np.dot(B, C)\n",
+    "A12 = np.dot(C, D)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.save('/Users/jere_7/Documents/AU24/AMATH 481/A4.npy', A4)\n",
+    "np.save('/Users/jere_7/Documents/AU24/AMATH 481/A5.npy', A5)\n",
+    "np.save('/Users/jere_7/Documents/AU24/AMATH 481/A6.npy', A6)\n",
+    "np.save('/Users/jere_7/Documents/AU24/AMATH 481/A7.npy', A7)\n",
+    "np.save('/Users/jere_7/Documents/AU24/AMATH 481/A8.npy', A8)\n",
+    "np.save('/Users/jere_7/Documents/AU24/AMATH 481/A9.npy', A9)\n",
+    "np.save('/Users/jere_7/Documents/AU24/AMATH 481/A10.npy', A10)\n",
+    "np.save('/Users/jere_7/Documents/AU24/AMATH 481/A11.npy', A11)\n",
+    "np.save('/Users/jere_7/Documents/AU24/AMATH 481/A12.npy', A12)"
    ]
   }
  ],
