--- a/HW3_jeremy.ipynb
+++ b/HW3_jeremy.ipynb
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -776,11 +776,7 @@
     "print(\"A10\", A10)\n",
     "print(\"A11\", A11)\n",
     "print(\"A12\", A12)\n",
-    "print(\"A13\", A13)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "print(\"A13\", A13)"
    ]
   }
  ],
