Updated code of creating gif

--- a/HW6_jeremy.ipynb
+++ b/HW6_jeremy.ipynb
@@ -2,19 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy.fft import fft2, ifft2\n",
-    "from scipy.integrate import solve_ivp"
+    "from scipy.integrate import solve_ivp\n",
+    "from PIL import Image\n",
+    "from matplotlib.animation import FuncAnimation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +116,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GIF saved as reaction_diffusion_uv_fft.gif\n"
+     ]
+    }
+   ],
+   "source": [
+    "def generate_frames_with_labels(A1, n, t_span):\n",
+    "    frames = []\n",
+    "    U_sol = A1[:N, :].reshape((n, n, -1)) \n",
+    "    V_sol = A1[N:, :].reshape((n, n, -1)) \n",
+    "\n",
+    "    for idx, t in enumerate(t_span):\n",
+    "        U_hat = U_sol[:, :, idx]\n",
+    "        V_hat = V_sol[:, :, idx]\n",
+    "        U = np.abs(ifft2(U_hat))  \n",
+    "        V = np.abs(ifft2(V_hat))  \n",
+    "\n",
+    "        fig, axes = plt.subplots(1, 2, figsize=(12, 6))\n",
+    "\n",
+    "        cax1 = axes[0].imshow(U, extent=(-L / 2, L / 2, -L / 2, L / 2), cmap='viridis')\n",
+    "        axes[0].set_title(\"U (Amplitude)\")\n",
+    "        axes[0].set_xlabel(\"x\")\n",
+    "        axes[0].set_ylabel(\"y\")\n",
+    "        fig.colorbar(cax1, ax=axes[0], orientation='vertical', label=\"Amplitude\")\n",
+    "\n",
+    "        cax2 = axes[1].imshow(V, extent=(-L / 2, L / 2, -L / 2, L / 2), cmap='plasma')\n",
+    "        axes[1].set_title(\"V (Amplitude)\")\n",
+    "        axes[1].set_xlabel(\"x\")\n",
+    "        axes[1].set_ylabel(\"y\")\n",
+    "        fig.colorbar(cax2, ax=axes[1], orientation='vertical', label=\"Amplitude\")\n",
+    "\n",
+    "        fig.suptitle(f\"Reaction-Diffusion System (FFT)- Time: {t:.2f}\", fontsize=16)\n",
+    "\n",
+    "        fig.canvas.draw()\n",
+    "        img = Image.fromarray(np.array(fig.canvas.renderer.buffer_rgba ()))\n",
+    "        frames.append(img)\n",
+    "        plt.close(fig)\n",
+    "\n",
+    "    return frames\n",
+    "\n",
+    "frames = generate_frames_with_labels(A1, n, tspan)\n",
+    "\n",
+    "gif_filename = \"reaction_diffusion_uv_fft.gif\"\n",
+    "frames[0].save(\n",
+    "    gif_filename,\n",
+    "    save_all=True,\n",
+    "    append_images=frames[1:],\n",
+    "    duration=200,  \n",
+    "    loop=0 \n",
+    ")\n",
+    "\n",
+    "print(f\"GIF saved as {gif_filename}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +233,6 @@
     "U = np.tanh(np.sqrt(X**2 + Y**2)) * np.cos(m * np.angle(X + 1j*Y) - np.sqrt(X**2 + Y**2))\n",
     "V = np.tanh(np.sqrt(X**2 + Y**2)) * np.sin(m * np.angle(X + 1j*Y) - np.sqrt(X**2 + Y**2))\n",
     "\n",
-    "\n",
     "Dxx = np.dot(D / L, D / L)\n",
     "Dyy = Dxx\n",
     "I = np.eye(len(Dxx))\n",
@@ -198,6 +261,67 @@
     "\n",
     "A2 = sol.y\n",
     "print(A2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GIF saved as reaction_diffusion_uv_cheb.gif\n"
+     ]
+    }
+   ],
+   "source": [
+    "def generate_frames_with_labels_cheb(sol, n, t_span):\n",
+    "    frames = []\n",
+    "    N = (n+1)**2\n",
+    "    U_sol = A2[:N, :].reshape((n+1, n+1, -1))  \n",
+    "    V_sol = A2[N:, :].reshape((n+1, n+1, -1)) \n",
+    "\n",
+    "    for idx, t in enumerate(t_span):\n",
+    "        U = U_sol[:, :, idx]  \n",
+    "        V = V_sol[:, :, idx]  \n",
+    "\n",
+    "        fig, axes = plt.subplots(1, 2, figsize=(12, 6))\n",
+    "\n",
+    "        cax1 = axes[0].imshow(U, extent=(-L/2, L/2, -L/2, L/2), cmap='viridis')\n",
+    "        axes[0].set_title(\"U (Amplitude)\")\n",
+    "        axes[0].set_xlabel(\"x\")\n",
+    "        axes[0].set_ylabel(\"y\")\n",
+    "        fig.colorbar(cax1, ax=axes[0], orientation='vertical', label=\"Amplitude\")\n",
+    "\n",
+    "        cax2 = axes[1].imshow(V, extent=(-L/2, L/2, -L/2, L/2), cmap='plasma')\n",
+    "        axes[1].set_title(\"V (Amplitude)\")\n",
+    "        axes[1].set_xlabel(\"x\")\n",
+    "        axes[1].set_ylabel(\"y\")\n",
+    "        fig.colorbar(cax2, ax=axes[1], orientation='vertical', label=\"Amplitude\")\n",
+    "\n",
+    "        fig.suptitle(f\"Reaction-Diffusion System (Chebyshev) - Time: {t:.2f}\", fontsize=16)\n",
+    "\n",
+    "        fig.canvas.draw()\n",
+    "        img = Image.fromarray(np.array(fig.canvas.renderer.buffer_rgba()))\n",
+    "        frames.append(img)\n",
+    "        plt.close(fig)\n",
+    "\n",
+    "    return frames\n",
+    "\n",
+    "frames = generate_frames_with_labels_cheb(sol, n, tspan)\n",
+    "\n",
+    "gif_filename = \"reaction_diffusion_uv_cheb.gif\"\n",
+    "frames[0].save(\n",
+    "    gif_filename,\n",
+    "    save_all=True,\n",
+    "    append_images=frames[1:],\n",
+    "    duration=200,\n",
+    "    loop=0 \n",
+    ")\n",
+    "\n",
+    "print(f\"GIF saved as {gif_filename}\")"
    ]
   }
  ],
